kubernetes/ps-app-frontend-sevice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: ps-app-frontend
  name: ps-app-frontend-service
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
      app: ps-app-frontend
      type: front-end
status: {}
